updated some glitches ingredients not showing correctly

--- a/src/App.css
+++ b/src/App.css
@@ -79,7 +79,7 @@
 }
 
 .dishes .dish-list .recipes .recipe-list .quantity {
-  font-size:.7rem;
+  font-size:.9rem;
   color:plum;
 }
 
